--- a/mylibrary/src/main/res/layout/activity_jokes.xml
+++ b/mylibrary/src/main/res/layout/activity_jokes.xml
@@ -6,9 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".JokesActivity">
 
+
     <TextView
         android:id="@+id/jokeTv"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
